@@ -54,6 +54,12 @@ These are the implementation specific factory attributes
     <dt><i>contextName</i>.period</dt>
     <dd>The period in seconds on which the metric data is sent to the
     server(s).</dd>
+
+    <dt><i>contextName</i>.multicast</dt>
+    <dd>Enable multicast for Ganglia</dd>
+
+    <dt><i>contextName</i>.multicast.ttl</dt>
+    <dd>TTL for multicast packets</dd>
     
     <dt><i>contextName</i>.units.<i>recordName</i>.<i>metricName</i></dt>
     <dd>The units for the specified metric in the specified record.</dd>
