@@ -811,6 +811,9 @@ Release 2.7.0 - UNRELEASED
     HADOOP-11432. Fix SymlinkBaseTest#testCreateLinkUsingPartQualPath2.
     (Liang Xie via gera)
 
+    HADOOP-10181. GangliaContext does not work with multicast ganglia setup.
+    (Andrew Johnson via cnauroth)
+
 Release 2.6.1 - UNRELEASED
 
   INCOMPATIBLE CHANGES
